# sorrydave

./: .gitignore  LICENSE  README.md  mkdocs.yml  mypy_output.txt  protocol.md  pyproject.toml  ruff_output.txt  test_output.txt
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  concepts.md  index.md  installation.md  quickstart.md  troubleshooting.md
docs/api/: identity.md  media.md  mls.md  reference.md  session.md  types.md
pydave/: __init__.py  exceptions.py  identity.py  session.py  types.py
pydave/crypto/: __init__.py  cipher.py  ratchet.py
pydave/media/: __init__.py  codecs.py  transform.py
pydave/mls/: __init__.py  group_state.py  opcodes.py
sorrydave/: __init__.py  _rfc9420.py  exceptions.py  identity.py  persistent_keys.py  session.py  types.py  verification.py
sorrydave old_fked/: exceptions.py  session.py
sorrydave old_fked/crypto/: ratchet.py
sorrydave old_fked/media/: __init__.py
sorrydave old_fked/mls/: group_state.py  opcodes.py
sorrydave/crypto/: __init__.py  cipher.py  ratchet.py
sorrydave/media/: codecs.py  transform.py
sorrydave/mls/: __init__.py  group_state.py  opcodes.py
tests/: __init__.py  test_cipher.py  test_cipher_comprehensive.py  test_codecs.py  test_codecs_comprehensive.py  test_full_flow.py  test_group_state.py  test_group_state_comprehensive.py  test_identity.py  test_identity_comprehensive.py  test_integration.py  test_opcodes.py  test_opcodes_comprehensive.py  test_persistent_keys.py  test_protocol_e2e.py  test_ratchet.py  test_ratchet_comprehensive.py  test_real_captures.py  test_session.py  test_session_comprehensive.py  test_transform_comprehensive.py  test_types_exceptions.py  test_uleb128.py  test_uleb128_comprehensive.py  test_verification.py  test_voice_payloads_bin.py
